--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ matrix:
     - os: osx
       osx_image: xcode8.3
 
+before_install:
+  brew tap vapor/tap;
+  brew update;
+  brew install ctls;
+
 script:
     - swift build
     - swift build -c release
