--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ matrix:
   include:
     - os: osx
       osx_image: xcode9
+      env: SCHEME="Sanitize-Package"
     - os: osx
       osx_image: xcode8.3
+      env: SCHEME="Sanitize"
 
 before_install:
   brew tap vapor/tap;
@@ -16,7 +18,7 @@ script:
     - swift build
     - swift build -c release
     - swift package generate-xcodeproj
-    - xcodebuild -scheme Sanitize -enableCodeCoverage YES test | xcpretty
+    - xcodebuild -scheme $SCHEME -enableCodeCoverage YES test | xcpretty
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
