--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,26 @@
 version: 2
 
 jobs:
-  build:
+  swift-3:
     docker:
-      - image: swiftdocker/swift:latest
-
+      - image: swift:3.1
     steps:
       - checkout
       - run: swift build
       - run: swift build -c release
       - run: swift test
+  swift-4:
+    docker:
+      - image: swift:4.0
+    steps:
+      - checkout
+      - run: swift build
+      - run: swift build -c release
+      - run: swift test
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - swift-3
+      - swift-4
