--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,49 @@
 version: 2
 
 jobs:
-  swift-3:
+  checkout_code:
     docker:
-      - image: swift:3.1
+      - image: swift:4.0
+    working_directory: ~/sanitize
     steps:
       - checkout
-      - run: swift build
-      - run: swift build -c release
-      - run: swift test
+      - save_cache:
+          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/sanitize
+
   swift-4:
     docker:
       - image: swift:4.0
+    working_directory: ~/sanitize    
     steps:
-      - checkout
+      - restore_cache:
+          keys:
+            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      - run: swift build
+      - run: swift build -c release
+      - run: swift test
+
+  swift-3:
+    docker:
+      - image: swift:3.1
+    working_directory: ~/sanitize
+    steps:
+      - restore_cache:
+          keys:
+            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
       - run: swift build
       - run: swift build -c release
       - run: swift test
 
 workflows:
   version: 2
-  build_and_test:
+  swift-3_and_swift-4:
     jobs:
-      - swift-3
-      - swift-4
+      - checkout_code
+      - swift-3:
+        requires:
+          - checkout_code
+      - swift-4:
+        requires:
+          - checkout_code
