--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,31 @@
 version: 2
 
 jobs:
-  checkout_code:
+  swift-3:
     docker:
-      - image: swift:4.0
-    working_directory: ~/sanitize
+      - image: swift:3.1
     steps:
+      - run: eval "$(curl -sL https://apt.vapor.sh)"
+      - run: apt-get install ctls
       - checkout
-      - save_cache:
-          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
-          paths:
-            - ~/sanitize
-
-  swift-4:
-    docker:
-      - image: swift:4.0
-    working_directory: ~/sanitize    
-    steps:
-      - restore_cache:
-          keys:
-            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
       - run: swift build
       - run: swift build -c release
       - run: swift test
 
-  swift-3:
+  swift-4:
     docker:
-      - image: swift:3.1
-    working_directory: ~/sanitize
+      - image: swift:4.0
     steps:
-      - restore_cache:
-          keys:
-            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      - run: eval "$(curl -sL https://apt.vapor.sh)"
+      - run: apt-get install ctls
+      - checkout
       - run: swift build
       - run: swift build -c release
       - run: swift test
 
 workflows:
   version: 2
-  swift-3_and_swift-4:
+  tests:
     jobs:
-      - checkout_code
-      - swift-3:
-        requires:
-          - checkout_code
-      - swift-4:
-        requires:
-          - checkout_code
+      - swift-3
+      - swift-4
