--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,31 @@
 version: 2
 
 jobs:
-  swift-3:
-    docker:
-      - image: swift:3.1
+  macos:
+    macos:
+      xcode: "9.0"
     steps:
-      - run: eval "$(curl -sL https://apt.vapor.sh)"
-      - run: apt-get install ctls
+      - run: brew install vapor/tap/vapor
       - checkout
       - run: swift build
       - run: swift build -c release
       - run: swift test
 
-  swift-4:
+  linux-3:
     docker:
-      - image: swift:4.0
+      - image: swift:3.1.1
     steps:
-      - run: eval "$(curl -sL https://apt.vapor.sh)"
-      - run: apt-get install ctls
+      - run: apt-get install -yq libssl-dev
+      - checkout
+      - run: swift build
+      - run: swift build -c release
+      - run: swift test
+
+  linux-4:
+    docker:
+      - image: swift:4.0.2
+    steps:
+      - run: apt-get install -yq libssl-dev
       - checkout
       - run: swift build
       - run: swift build -c release
@@ -27,5 +35,6 @@ workflows:
   version: 2
   tests:
     jobs:
-      - swift-3
-      - swift-4
+      - macos
+      - linux-3
+      - linux-4
