--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - run: swift build
       - run: swift build -c release
       - run: swift test
+      - run: bash <(curl -s https://codecov.io/bash)
 
   linux-3:
     docker:
