--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,23 +3,21 @@ version: 2
 jobs:
   macos:
     macos:
-      xcode: "9.0"
+      xcode: "9.2"
     steps:
-      - run: brew install vapor/tap/vapor
-      - run: sudo gem install xcpretty
       - checkout
       - run: swift build
       - run: swift build -c release
-      - run: swift package generate-xcodeproj		
-      - run: xcodebuild -scheme Sanitize-Package -enableCodeCoverage YES test | xcpretty
+      - run: swift test		
       - run: bash <(curl -s https://codecov.io/bash)
 
   linux:
     docker:
-      - image: swift:4.0.2
+      - image: norionomura/swift:swift-4.1-branch
     steps:
-      - run: apt-get install -yq libssl-dev
       - checkout
+      - run: apt-get update
+      - run: apt-get install -yq libssl-dev
       - run: swift build
       - run: swift build -c release
       - run: swift test
@@ -28,5 +26,5 @@ workflows:
   version: 2
   tests:
     jobs:
-      - macos
+      # - macos
       - linux
