--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -12,25 +12,36 @@ opt_in_rules:
   - force_unwrapping
   - file_header
 
-force_cast: warning
-
+force_cast: warning # implicitly
 force_try:
-  severity: warning # explicitly. Give warning only for force try
+  severity: warning # explicitly
 
-type_body_length:
-  warning: 300
-  error: 400
+line_length: 100
 
 function_body_length:
-  warning: 50
-  error: 80
+  - 50 # warning
+  - 100 # error
+ 
+type_body_length:
+  - 300 # warning
+  - 400 # error
+
+file_length:
+  warning: 500
+  error: 800
+
+type_name:
+  min_length: 4 # only warning
+  max_length: # warning and error
+    warning: 20
+    error: 30
 
 identifier_name:
   min_length:
     error: 3
   excluded:
     - id
-    
+
 file_header:
   required_pattern: |
                     \/\/
@@ -39,4 +50,5 @@ file_header:
                     \/\/
                     \/\/  Created by .*? on \d{1,2}\/\d{1,2}\/\d{2}\.
                     \/\/  Copyright © \d{4} Gustavo Perdomo\. All rights reserved\.
+
 reporter: "emoji"
